1) Cleaning the code 1.1) Replaced scoped_ptr with unique_ptr 1.2) Introduced shared_ptr in a couple of places 2) Now using the standard C++ number generator 3) Moved all distance/correlation functions to distance_*.cc files 4) Fixed a bug with computation of SpearmanRho. Fortunately, it did not appear if the number of pivots was a factor of 4. 5) Carefully introduced #ifdef to make the code compilable without SIMD extensions. 6) Added a generic LP space and implemented its several efficient implementations 7) Revised unit tests and add new tests, in particular, for rank correlation functions.

--- a/similarity_search/CMakeLists.txt
+++ b/similarity_search/CMakeLists.txt
@@ -38,6 +38,9 @@ if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
     if (CXX_COMPILER_VERSION VERSION_LESS 4.7)
         message(FATAL_ERROR "GCC version must be at least 4.7!")
     endif()
+    # Uncomment the following lines to see how the code compiles without SSE4.2 and/or SSE2
+    #set (CMAKE_CXX_FLAGS_RELEASE "-Wall -Ofast -lm -lrt -DNDEBUG -std=c++11 -DHAVE_CXX0X -march=x86-64")
+    #set (CMAKE_CXX_FLAGS_RELEASE "-Wall -Ofast -lm -lrt -DNDEBUG -std=c++11 -DHAVE_CXX0X -march=core2")
     set (CMAKE_CXX_FLAGS_RELEASE "-Wall -Ofast -lm -lrt -DNDEBUG -std=c++11 -DHAVE_CXX0X -march=native")
     set (CMAKE_CXX_FLAGS_DEBUG   "-Wall -ggdb  -lm -lrt -DNDEBUG -std=c++11 -DHAVE_CXX0X -march=native")
 elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Intel")
