--- a/similarity_search/src/CMakeLists.txt
+++ b/similarity_search/src/CMakeLists.txt
@@ -13,6 +13,10 @@ file(GLOB SRC_FILES ${PROJECT_SOURCE_DIR}/src/*.cc ${PROJECT_SOURCE_DIR}/src/spa
 file(GLOB SRC_FACTORY_FILES ${PROJECT_SOURCE_DIR}/src/factory/method/*.cc ${PROJECT_SOURCE_DIR}/src/factory/space/*.cc)
 list(REMOVE_ITEM SRC_FILES ${PROJECT_SOURCE_DIR}/src/main.cc)
 list(REMOVE_ITEM SRC_FILES ${PROJECT_SOURCE_DIR}/src/tune_vptree.cc)
+# The dummy application file also needs to be removed from the list
+# of library source files:
+list(REMOVE_ITEM SRC_FILES ${PROJECT_SOURCE_DIR}/src/dummy_app.cc)
+
 
 include_directories(${PROJECT_SOURCE_DIR}/include ${PROJECT_SOURCE_DIR}/include/method ${PROJECT_SOURCE_DIR}/include/space)
 message(STATUS "Header files: ${HDR_FILES}")
@@ -32,8 +36,15 @@ add_library (NonMetricSpaceLib ${SRC_FILES} ${HDR_FILES})
 add_dependencies (NonMetricSpaceLib lshkit)
 add_executable (experiment main.cc ${SRC_FACTORY_FILES})
 add_executable (tune_vptree tune_vptree.cc ${SRC_FACTORY_FILES})
+# The following line is necessary to create an executable for the dummy application:
+add_executable (dummy_app dummy_app.cc ${SRC_FACTORY_FILES})
+
 target_link_libraries (experiment NonMetricSpaceLib lshkit ${Boost_LIBRARIES} ${GSL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 target_link_libraries (tune_vptree NonMetricSpaceLib lshkit ${Boost_LIBRARIES} ${GSL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+# What are the libraries that we need to link with for dummy_app?
+target_link_libraries (dummy_app NonMetricSpaceLib lshkit ${Boost_LIBRARIES} 
+                                                          ${GSL_LIBRARIES} 
+                                                          ${CMAKE_THREAD_LIBS_INIT})
 
 if (CMAKE_BUILD_TYPE STREQUAL "Release")
     set (LIBRARY_OUTPUT_PATH "${PROJECT_SOURCE_DIR}/release/")
