--- a/docs/makefile
+++ b/docs/makefile
@@ -2,3 +2,5 @@ all: manual.tex
 	latex manual.tex ; bibtex manual  
 clean: 
 	rm -f *.log *.blg *.dvi *.bbl *.aux *.out *.pdf
+cleanlog: 
+	rm -f *.log *.blg *.dvi *.bbl *.aux *.out 
