Fixing a bug in the CMakeLists.txt

--- a/similarity_search/CMakeLists.txt
+++ b/similarity_search/CMakeLists.txt
@@ -73,8 +73,8 @@ endif (GSL_FOUND)
 
 # Can be use to hardwire boost location.
 #set (BOOST_ROOT $ENV{HOME}/boost_1_48_0)
-set (Boost_INCLUDE_DIR ${BOOST_ROOT})
-set (Boost_LIBRARY_DIR ${BOOST_ROOT}/stage/lib)
+#set (Boost_INCLUDE_DIR ${BOOST_ROOT})
+#set (Boost_LIBRARY_DIR ${BOOST_ROOT}/stage/lib)
 find_package (Boost 1.48 COMPONENTS system filesystem program_options REQUIRED)
 include_directories (${Boost_INCLUDE_DIR})
 link_directories (${Boost_LIBRARY_DIR})
