--- a/similarity_search/src/CMakeLists.txt
+++ b/similarity_search/src/CMakeLists.txt
@@ -10,7 +10,6 @@
 
 file(GLOB HDR_FILES ${PROJECT_SOURCE_DIR}/include/*.h ${PROJECT_SOURCE_DIR}/include/method/*.h ${PROJECT_SOURCE_DIR}/include/space/*.h)
 file(GLOB SRC_FILES ${PROJECT_SOURCE_DIR}/src/*.cc ${PROJECT_SOURCE_DIR}/src/space/*.cc ${PROJECT_SOURCE_DIR}/src/method/*.cc)
-file(GLOB SRC_FACTORY_FILES ${PROJECT_SOURCE_DIR}/src/factory/method/*.cc ${PROJECT_SOURCE_DIR}/src/factory/space/*.cc)
 list(REMOVE_ITEM SRC_FILES ${PROJECT_SOURCE_DIR}/src/main.cc)
 list(REMOVE_ITEM SRC_FILES ${PROJECT_SOURCE_DIR}/src/tune_vptree.cc)
 # The dummy application file also needs to be removed from the list
@@ -22,7 +21,6 @@ include_directories(${PROJECT_SOURCE_DIR}/include ${PROJECT_SOURCE_DIR}/include/
 message(STATUS "Header files: ${HDR_FILES}")
 message(STATUS "Source files: ${SRC_FILES}")
 
-include_directories (${PROJECT_SOURCE_DIR}/lshkit/include ${PROJECT_SOURCE_DIR}/src ${Boost_INCLUDE_DIR})
 link_directories(${Boost_LIBRARY_DIRS})
 
 find_package (Threads)
@@ -34,10 +32,10 @@ endif (Threads_FOUND)
 
 add_library (NonMetricSpaceLib ${SRC_FILES} ${HDR_FILES})
 add_dependencies (NonMetricSpaceLib lshkit)
-add_executable (experiment main.cc ${SRC_FACTORY_FILES})
-add_executable (tune_vptree tune_vptree.cc ${SRC_FACTORY_FILES})
+add_executable (experiment main.cc)
+add_executable (tune_vptree tune_vptree.cc)
 # The following line is necessary to create an executable for the dummy application:
-add_executable (dummy_app dummy_app.cc ${SRC_FACTORY_FILES})
+add_executable (dummy_app dummy_app.cc)
 
 target_link_libraries (experiment NonMetricSpaceLib lshkit ${Boost_LIBRARIES} ${GSL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 target_link_libraries (tune_vptree NonMetricSpaceLib lshkit ${Boost_LIBRARIES} ${GSL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
