--- a/similarity_search/CMakeLists.txt
+++ b/similarity_search/CMakeLists.txt
@@ -84,7 +84,7 @@ if (NOT WIN32)
       include_directories (${GSL_INCLUDE_DIRS} ${GSLCBLAS_INCLUDE_DIRS})
       set (LIBS ${LIBS} ${GSL_LIBRARIES} ${GSLCBLAS_LIBRARIES})
   else (GSL_FOUND)
-      message (STATUS "Could not locate GSL.")
+      message (FATAL_ERROR "Could not locate GSL.")
   endif (GSL_FOUND)
 
   include_directories (${PROJECT_SOURCE_DIR}/lshkit/include)
@@ -98,9 +98,15 @@ endif()
 #set (Boost_LIBRARY_DIR ${BOOST_ROOT}/stage/lib)
 
 find_package (Boost 1.48 COMPONENTS system filesystem program_options REQUIRED)
-include_directories (${Boost_INCLUDE_DIR})
-include_directories (${PROJECT_SOURCE_DIR}/lshkit/include ${PROJECT_SOURCE_DIR}/src ${Boost_INCLUDE_DIR})
-link_directories (${Boost_LIBRARY_DIR})
+
+if (Boost_FOUND)
+  message (STATUS "Found BOOST.")
+  include_directories (${Boost_INCLUDE_DIR})
+  include_directories (${PROJECT_SOURCE_DIR}/lshkit/include ${PROJECT_SOURCE_DIR}/src ${Boost_INCLUDE_DIR})
+  link_directories (${Boost_LIBRARY_DIR})
+else ()
+  message (FATAL_ERROR "Could not locate BOOST.")
+endif ()
 
 add_subdirectory (src)
 add_subdirectory (test)
