--- a/similarity_search/test/CMakeLists.txt
+++ b/similarity_search/test/CMakeLists.txt
@@ -10,13 +10,21 @@
 
 include_directories (${NonMetricSpaceLib_SOURCE_DIR}/include ${NonMetricSpaceLib_SOURCE_DIR}/include/space ${NonMetricSpaceLib_SOURCE_DIR}/include)
 
-add_dependencies (NonMetricSpaceLib lshkit)
-
 file(GLOB TEST_SRC_FILES ${PROJECT_SOURCE_DIR}/test/test*.cc)
 
 add_executable (bunit bunit.cc ${TEST_SRC_FILES})
 
-target_link_libraries (bunit NonMetricSpaceLib lshkit ${GSL_LIBRARIES} )
+add_dependencies (bunit NonMetricSpaceLib)
+
+if (NOT WIN32)
+  add_dependencies (bunit lshkit)
+  set(LSHKIT_LIB "lshkit")
+else()
+# NO lshkit for Win32
+  set(LSHKIT_LIB "")
+endif()
+
+target_link_libraries (bunit NonMetricSpaceLib ${LSHKIT_LIB} ${GSL_LIBRARIES} )
 
 if (CMAKE_BUILD_TYPE STREQUAL "Release")
     set (LIBRARY_OUTPUT_PATH "${PROJECT_SOURCE_DIR}/release/")
